[gd_scene load_steps=15 format=3 uid="uid://tjtrlmgdkcd2"]

[ext_resource type="Texture2D" uid="uid://di4xmjoaug8ja" path="res://Scenes/Scene 1/1 Оригинал.png" id="1_75o1y"]
[ext_resource type="Script" uid="uid://bleyb2fxfnew" path="res://Scenes/Scene 1/scene_1.gd" id="2_uqvcb"]
[ext_resource type="Texture2D" uid="uid://upqsd0jcclr7" path="res://Scenes/Scene 1/Лампа 1.png" id="3_hg5qw"]
[ext_resource type="Texture2D" uid="uid://c78egcc5rfo6h" path="res://Scenes/Scene 1/Button_close.png" id="3_vbewq"]
[ext_resource type="Texture2D" uid="uid://qa5p3ltpitmx" path="res://Scenes/Scene 1/Лампа 2.png" id="4_8ytky"]
[ext_resource type="Texture2D" uid="uid://dv4it8toglb4y" path="res://Scenes/Scene 1/Лампа 3.png" id="5_sgnin"]
[ext_resource type="Texture2D" uid="uid://dkwwe7q63dd5g" path="res://Assets/Items/Записка для Брин на столе.png" id="7_yll6q"]
[ext_resource type="Texture2D" uid="uid://bg7sf2vola8ae" path="res://Scenes/Scene 1/Пила не взята.png" id="8_eyokt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5glc0"]
size = Vector2(192, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm8qe"]
atlas = ExtResource("3_hg5qw")
region = Rect2(0, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsbgq"]
atlas = ExtResource("4_8ytky")
region = Rect2(0, 0, 66, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7jfo"]
atlas = ExtResource("5_sgnin")
region = Rect2(0, 0, 66, 66)

[sub_resource type="SpriteFrames" id="SpriteFrames_mvila"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm8qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsbgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7jfo")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0untg"]
size = Vector2(1787, 32)

[node name="Scene 1" type="Sprite2D"]
position = Vector2(48, 48)
texture = ExtResource("1_75o1y")
centered = false
script = ExtResource("2_uqvcb")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visible = false
z_index = 1
offset_top = -48.0
offset_right = 608.0
offset_bottom = 208.0
scale = Vector2(3, 3)
volume_db = 7.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="VideoStreamPlayer"]
visible = false
position = Vector2(550.333, 185.667)
scale = Vector2(0.375, 0.398437)
texture_normal = ExtResource("3_vbewq")

[node name="Label" type="Label" parent="VideoStreamPlayer/TouchScreenButton"]
visible = false
offset_left = -244.444
offset_top = 145.569
offset_right = 129.556
offset_bottom = 195.569
theme_override_font_sizes/font_size = 36
text = "Завершить заставку"

[node name="Area2D Камни" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D Камни"]
position = Vector2(462, 385.5)
shape = SubResource("RectangleShape2D_5glc0")

[node name="AnimatedSprite2D Лампа" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(1293, 285)
sprite_frames = SubResource("SpriteFrames_mvila")
autoplay = "default"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 10.0

[node name="Записка Брин" type="Sprite2D" parent="."]
position = Vector2(1230, 444)
texture = ExtResource("7_yll6q")
centered = false

[node name="Пила не взята" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1440, 510)
texture = ExtResource("8_eyokt")
centered = false

[node name="AudioStreamPlayer Озвучивание предметов" type="AudioStreamPlayer" parent="."]
volume_db = 10.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(915, 218)
shape = SubResource("RectangleShape2D_0untg")

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="VideoStreamPlayer/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="input_event" from="Area2D Камни" to="." method="_on_area_2d_камни_input_event"]
